@@ -380,7 +380,9 @@ $item_rows = array(
 	100  => "100 Rows",
 	250  => "250 Rows",
 	500  => "500 Rows",
-	1000 => "1000 Rows"
+	1000 => "1000 Rows",
+	2000 => "2000 Rows",
+	5000 => "5000 Rows"
 	);
 
 $page_refresh_interval = array(
@@ -389,7 +391,9 @@ $page_refresh_interval = array(
 	20 => "20 Seconds",
 	30 => "30 Seconds",
 	60 => "1 Minute",
-	300 => "5 Minutes");
+	300 => "5 Minutes",
+	600 => "10 Minutes",
+	9999999 => "Never");
 
 $user_auth_realms = array(
 	1 => "User Administration",
