@@ -31,6 +31,8 @@ Cacti CHANGELOG
 -bug: The default user tree link icon would not be properly highlighted when opening graphs
 -bug: Severe performance problems when adding data query based graphs.
 -bug: Default refresh on Cacti Log was too quick
+-bug: Some users don't like the idea of automatic page refreshes
+-bug: Allow more rows to be visible in Cacti pages
 -feature#0001249: New pseudo CDEF variables for "Count All|Similar Data Sources (NO)?DUPS"
 -feature#0001235: CLI script needed to activate a query: add_data_query.php
 -feature#0001233: Move $export_types variable definition from templates_export.php to include/global_form.php
